sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: not found: value =!
        if (=!plusPetitQue(i,i+1)) {
            ^